# tmux-agent-usage

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
hooks/: pre-commit
plugin/: tmux-agent-usage.tmux
scripts/: install.sh
src/: binary.rs  cache.rs  format.rs  lib.rs  main.rs  model.rs
src/provider/: mod.rs
src/provider/claude/: mod.rs  oauth.rs
src/provider/codex/: mod.rs  pty.rs  rpc.rs
tests/: cache_tests.rs  codex_pty_parse_tests.rs  codex_rpc_decode_tests.rs  format_tests.rs
