[package]
name = "agent-usage"
version = "0.1.4"
edition = "2021"
description = "Monitor AI coding agent API usage across providers"
license = "MIT"
repository = "https://github.com/raine/tmux-agent-usage"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
portable-pty = "0.8"
fs2 = "0.4"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3.14"
